--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -12,10 +12,10 @@
     author = {Fridrich, Jessica},
     title = {Steganography in Digital Media: Principles, Algorithms, and Applications},
     year = {2009},
-    isbn = {0521190193, 9780521190190},
     edition = {1st},
     publisher = {Cambridge University Press},
     address = {New York, NY, USA},
+    note = {ISBN: 9780521190190}
 } 
 
 @article{h264-std,
@@ -28,7 +28,7 @@
     author = {Williams, Scott},
     title = "Steganographic file systems within video files",
     year = "2015",
-    note = "University of Cambridge Part II Computer Science Tripos Project Dissertation"
+    note = "University of Cambridge Part II Computer Science Tripos Project Dissertation. \url{https://github.com/slwilliams/stegasis/raw/master/doc/dissertation.pdf}"
 }
 
 @mastersthesis{bateman,
@@ -36,15 +36,14 @@
     title = "Image Steganography and Steganalysis",
     school = "University of Surrey",
     year = "2008",
-    url = "https://www.cise.ufl.edu/~makumar/proposalppt.pdf"
+    note = "\url{http://chemistry47.com/PDFs/Cryptography/Steganography/Image%20Steganography%20and%20Steganalysis.pdf}"
 }
 
 @misc{jpegdctcoding,
     author = {Buchner, Herbert},
     title = "Image and Video Watermarking",
     year = "1998",
-    note = "Telecommunications Seminar WS",
-    url = "http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.301.1551&rep=rep1&type=pdf"
+    note = "Telecommunications Seminar WS, \url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.301.1551&rep=rep1&type=pdf}"
 }
 
 @article{f5, 
@@ -52,13 +51,13 @@
     title = "F5 -- A Steganographic Algorithm",
     journal = "4th International Workshop on Information Hiding",
     year = "2001",
-    howpublished = "https://f5-steganography.googlecode.com/svn/tags/release-0.3/F5%20Steganography.pdf"
+    note = "\url{https://f5-steganography.googlecode.com/svn/tags/release-0.3/F5%20Steganography.pdf}"
 }
 
 @inproceedings{xu2006steganography,
     title={Steganography in compressed video stream},
     author={Xu, Changyong and Ping, Xijian and Zhang, Tao},
-    booktitle={Innovative Computing, Information and Control, 2006. ICICIC'06. First International Conference on},
+    booktitle={First International Conference on Innovative Computing, Information and Control.},
     volume={1},
     pages={269--272},
     year={2006},
@@ -68,8 +67,8 @@
 @inproceedings{fang2006data,
     title={Data hiding for digital video with phase of motion vector},
     author={Fang, Ding-Yu and Chang, Long-Wen},
-    booktitle={Circuits and Systems, 2006. ISCAS 2006. Proceedings. 2006 IEEE International Symposium on},
-    pages={4--pp},
+    booktitle={IEEE International Symposium on Circuits and Systems. Proceedings.},
+    pages={1422--1425},
     year={2006},
     organization={IEEE}
 }
@@ -79,13 +78,13 @@
     title = "Video Steganography",
     school = "University of Sheffield",
     year = "2013",
-    howpublished = "http://steganosaur.us/about"
+    note = "\url{http://steganosaur.us/about}"
 }
 
 @inproceedings{xu2013video,
     title={Video steganalysis based on the constraints of motion vectors},
     author={Xu, Xikai and Dong, Jing and Wang, Wei and Tan, Tieniu},
-    booktitle={Image Processing (ICIP), 2013 20th IEEE International Conference on},
+    booktitle={20th IEEE International Conference on Image Processing (ICIP)},
     pages={4422--4426},
     year={2013},
     organization={IEEE}
@@ -120,4 +119,27 @@
     pages={355--368},
     year={1998},
     organization={Springer}
+}
+
+
+@book{crowcroft1999internetworking,
+    title={Internetworking multimedia},
+    author={Crowcroft, Jon},
+    year={1999},
+    publisher={CRC Press},
+    note="ISBN: 9781857286519"
+}
+
+@misc{interframe-wiki,
+    author = "Wikipedia",
+    title = "Inter frame",
+    note = "\url{https://en.wikipedia.org/wiki/Inter_frame}. Source used only for figures. Retrieved on 24 Feb 2016."
+}
+
+@book{richardson2004h,
+    title={H.264 and MPEG-4 video compression: video coding for next-generation multimedia},
+    author={Richardson, Iain E},
+    year={2004},
+    publisher={John Wiley \& Sons},
+    note="ISBN: 9780470346396"
 }
